compiler/src/test/resources/amyc/typer/failing/ErrorError.amy
module ErrorError
  error(1)
end ErrorError
